--- a/css/style.css
+++ b/css/style.css
@@ -34,3 +34,10 @@ html {
     font-size: 25px;
   }
 }
+
+@media only screen and (max-width: 400px){
+  .img {
+    width: 120%;
+    margin-left: -30px;
+  }
+}
