--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,11 @@ small a {
   }
 
   header h1 {
-    font-size: 25px;
+    font-size: 20px;
+    margin-top: 25px;
+  }
+
+  footer {
+    height: 70px;
   }
 }
