--- a/css/style.css
+++ b/css/style.css
@@ -20,17 +20,18 @@ html {
   text-align: center;
 }
 footer {
-  background-color: black;
+  background-color: #c5c5c5;
   position: relative;
   left: 0;
   bottom: 0;
   height: 50px;
   width: 100%;
-  color: #ffffff;
+  color: #000;
+  padding-top: 25px;
 }
 #donate {
   padding: 15px;
-  color: #000000;
+  color: #ffffff;
   text-decoration: none;
 }
 button {
@@ -40,9 +41,24 @@ button {
   margin-top: 10px;
 }
 small a {
-  color: #ffffff;
+  color: #000000;
 }
-
+.social-icon-div {
+  width: 100%;
+  padding-left: 20px;
+}
+.social-icon {
+  width: 30px;
+    margin-right: 20px;
+    float: left;
+}
+.social-icon:hover,
+.social-icon:focus,
+.scrolltop:hover,
+.scrolltop:focus {
+  opacity: 0.6;
+  transition: ease 0.2s;
+}
 /* .thumbnail {
   width: 60px;
   position: relative;
@@ -57,10 +73,6 @@ small a {
 
   header h1 {
     margin-top: 25px;
-  }
-
-  footer {
-    height: 70px;
   }
 
   button {
