--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,32 @@
+html {
+  font-family: "Roboto", sans-serif;
+  text-align: center; }
+
 body {
-  margin: 0;
-}
-  header h1 {
-  font-size: 35px;
-  line-height: 0.25px;
-}
+  margin: 0; }
+
 header {
-  background-color: #000;
+  background-color: #000000;
   height: 50px;
   padding: 20px;
-  color: #fff;
-}
+  color: #fff; }
+  header h1 {
+    font-size: 35px;
+    line-height: 0.25px; }
+    @media only screen and (max-width: 800px) {
+      header h1 {
+        margin-top: 25px; } }
+    @media only screen and (max-width: 415px) {
+      header h1 {
+        font-size: 20px; } }
+
 .img {
   margin: auto;
-  width: 50%;
-}
-html {
-  font-family: 'Roboto', sans-serif;
-  text-align: center;
-}
+  width: 50%; }
+  @media only screen and (max-width: 800px) {
+    .img {
+      width: 100%; } }
+
 footer {
   background-color: #c5c5c5;
   position: relative;
@@ -26,62 +34,42 @@ footer {
   bottom: 0;
   height: 50px;
   width: 100%;
-  color: #000;
-  padding-top: 25px;
-}
+  color: #000000;
+  padding-top: 25px; }
+
 #donate {
   padding: 15px;
-  color: #ffffff;
-  text-decoration: none;
-}
+  color: #fff;
+  text-decoration: none; }
+
 button {
   font-size: 15px;
   padding: 5px;
   text-decoration: none;
-  margin-top: 10px;
-}
+  margin-top: 10px; }
+  @media only screen and (max-width: 800px) {
+    button {
+      margin-top: 20px; } }
+
 small a {
-  color: #000000;
-}
-.social-icon-div {
-  width: 100%;
-  padding-left: 20px;
-}
+  color: #000000; }
+
 .social-icon {
   width: 30px;
-    margin-right: 20px;
-    float: left;
-}
-.social-icon:hover,
-.social-icon:focus,
-.scrolltop:hover,
-.scrolltop:focus {
-  opacity: 0.6;
-  transition: ease 0.2s;
-}
-/* .thumbnail {
-  width: 60px;
-  position: relative;
-  transform: translateY(-58px);
-  padding: 25px;
-} */
-
-@media only screen and (max-width: 800px){
-  .img {
+  margin-right: 20px;
+  float: left; }
+  .social-icon:hover, .social-icon:focus {
+    opacity: 0.6;
+    transition: ease 0.2s; }
+    .scrolltop:hover, .scrolltop:focus {
+      opacity: 0.6;
+      transition: ease 0.2s; }
+  .social-icon-div {
     width: 100%;
-  }
+    padding-left: 20px; }
 
-  header h1 {
-    margin-top: 25px;
-  }
+@media only screen and (max-width: 415px) {
+  #doc {
+    padding: 0 5px 0 5px; } }
 
-  button {
-    margin-top: 20px;
-  }
-}
-
-@media only screen and (max-width: 415px){
-  header h1 {
-    font-size: 20px;
-  }
-}
+/*# sourceMappingURL=style.css.map */
